# rdma-code

./: .gitignore  README.md
01_basic-client-server/: Makefile  client.c  server.c
01_cas-client-server/: cas-client-sequential.sh  data-to-table.py  rdma-client.c  rdma-server.c
01_cas-seq/: CMakeLists.txt  cas-client-sequential.sh  get_clock.c  rdma-client.c
01_send-recv/: Makefile  client.c  rdma_global.c  rdma_global.h  server  server.c
02_cas-random/: cas-client-random.sh  rdma-client.c
03_cas-test-server-shell/: cas-client-sequential.sh  cas-server-sequential.sh  rdma-server.c
04_cas-multi-seq/: cas-client-sequential.sh  cas-server-sequential.sh
05_cas-multi-random/: Makefile  cas-client-random.sh  cas-server-random.sh
06_cas-seq-test/: rdma-client.c  rdma-server.c
07_active-server/: Makefile  rdma-client.c  rdma-server.c
