CMAKE_MINIMUM_REQUIRED(VERSION 3.13.1)

cmake_policy(SET CMP0091 NEW)
PROJECT(HFT_TRADER)

message(STATUS CTP_VERSION_from_env=$ENV{CTP_VERSION})
message(STATUS CTP_VERSION=${CTP_VERSION})
#CTP_VERSION=v6.3.19_P1
#CTP_VERSION=v6.3.19_T1_20200423

SET(CMAKES_ROOT ${PROJECT_SOURCE_DIR}/../..)
SET(CMAKE_INCLUDE ${CMAKES_ROOT}/project_cmake)
SET(CONF_DIR ${CMAKES_ROOT}/conf)
SET(BIN_PATH ${CMAKES_ROOT}/bin/${CTP_VERSION})

include(${CMAKE_INCLUDE}/platform.cmake)
include(${CMAKE_INCLUDE}/compiler.cmake)

include(${CMAKE_INCLUDE}/src_tools.cmake)
include(${CMAKE_INCLUDE}/boost_common.cmake)
include(${CMAKE_INCLUDE}/libs.cmake)

SET(COMMON_H_DIR ${CMAKES_ROOT}/includes)

SET(CTP_ROOT ${CMAKES_ROOT}/deps/ctp/${CTP_VERSION})
SET(CTP_H_DIR ${CTP_ROOT}/include/${PLATFORM})
SET(CTP_LIB_DIR ${CTP_ROOT}/libs/${PLATFORM})

SET(JSON_H_DIR ${CMAKES_ROOT}/deps/json/single_include)

SET(YAMLCPP_ROOT ${CMAKES_ROOT}/deps/yaml-cpp)
SET(YAMLCPP_H_DIR ${YAMLCPP_ROOT}/include)
SET(YAMLCPP_LIB_DIR ${YAMLCPP_ROOT}/libs/${PLATFORM}/${CMAKE_BUILD_TYPE})

SET(GTEST_ROOT ${CMAKES_ROOT}/deps/gtest)
SET(GTEST_H_DIR ${GTEST_ROOT}/include)
SET(GTEST_LIB_DIR ${GTEST_ROOT}/libs/${PLATFORM}/${CMAKE_BUILD_TYPE})

SET(TEST_SUFFIX "tests")

IF (CMAKE_BUILD_TYPE MATCHES "Release")
    SET(YAMLCPP_LIB_NAME "libyaml-cppmd.lib")
ELSEIF (CMAKE_BUILD_TYPE MATCHES "Debug")
    SET(YAMLCPP_LIB_NAME "libyaml-cppmdd.lib")
ENDIF()

#internal libs
SET(INTERNAL_LIBS_DIR ${CMAKES_ROOT}/libs)

SET(UTILITIES_TARGET "utilities")
SET(UTILITIES_LIBS_DIR ${INTERNAL_LIBS_DIR}/${UTILITIES_TARGET})

SET(GATEWAY_TARGET "gateway")
SET(GATEWAY_LIBS_DIR ${INTERNAL_LIBS_DIR}/${GATEWAY_TARGET})

SET(EVENT_ENGINE_TARGET "event_engine")
SET(EVENT_ENGINE_LIBS_DIR ${INTERNAL_LIBS_DIR}/${EVENT_ENGINE_TARGET})

SET(TRADER_TARGET "trader")
SET(TRADER_LIBS_DIR ${INTERNAL_LIBS_DIR}/${TRADER_TARGET})

SET(STRATEGIES_TARGET "strategies")
SET(STRATEGIES_LIBS_DIR ${INTERNAL_LIBS_DIR}/${STRATEGIES_TARGET})

set_property(GLOBAL PROPERTY USE_FOLDERS ON)

ADD_SUBDIRECTORY(${UTILITIES_TARGET})
ADD_SUBDIRECTORY(${GATEWAY_TARGET})
ADD_SUBDIRECTORY(${EVENT_ENGINE_TARGET})
ADD_SUBDIRECTORY(${TRADER_TARGET})
ADD_SUBDIRECTORY(${STRATEGIES_TARGET})
#ADD_SUBDIRECTORY(${EVENT_ENGINE_TARGET}.${TEST_SUFFIX})
